Add some Trusona stuff

--- a/~alwold/cv.html
+++ b/~alwold/cv.html
@@ -61,7 +61,7 @@
      Development Platforms
     </span>
     <ul>
-      <li>iOS - Swift (2.x, 3.0), Objective C, Push notifications, TouchID, Autolayout</li>
+      <li>iOS - Swift (up to 5), Objective C, Push notifications, TouchID, Autolayout, Keychain, LocalAuthentication</li>
       <li>Android - Compatibility API, Programming for device fragmentation</li>
       <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
       <li>Ruby on Rails</li>
@@ -80,6 +80,7 @@
       <li>Databases - PostgreSQL, MySQL, Oracle</li>
       <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
       <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
+      <li>Cloud - AWS, Kubernetes, Docker</li>
       <li>Project management - Confluence, JIRA, Trello</li>
    </div>
   <div id="experience">
@@ -87,11 +88,27 @@
     Work Experience
    </div>
    <div class="subsection">
-     10/2015 - 9/2017<br/>
-     Mobile Software Developer<br/>
-     KUBRA (formerly iFactor)<br/>
+     9/2019 - Current<br/>
+     Senior iOS Developer<br/>
+     Trusona<br/>
    </div>
-   <p/>
+   <p>
+     <ul>
+       <li>Develop new features and maintain the Trusona iOS app</li>
+       <li>Develop and maintain the Trusona SDK, distributed as a Cocoapod</li>
+       <li>Manage a continuous integration pipeline for Trusona iOS app and SDKs</li>
+       <li>Automate testing of the Trusona iOS app using Calabash UI tests</li>
+       <li>Lead design sessions to plan architecture and implementation for mobile and backend features</li>
+       <li>Develop and maintain features in backend Java (Spring Boot) and Ruby on Rails stacks</li>
+       <li>Configure backend deployments to Kubernetes clusters</li>
+     </ul>
+   </p>
+   <div class="subsection">
+     10/2015 - 9/2017<br/>
+     Senior Mobile Software Developer<br/>
+     KUBRA/iFactor<br/>
+   </div>
+   <p>
    <ul>
      <li>Develop custom iOS apps for clients in the electric utility industry</li>
      <li>Develop new apps in Swift and maintain existing Objective C apps/libraries</li>
@@ -99,6 +116,7 @@
      <li>Develop Java backend services to integrate between app and utility web services</li>
      <li>Act as a technical liason to the project team, assisting with customer requirement gathering, support, etc.</li>
    </ul>
+   </p>
    <div class="subsection">
     9/2011 - 10/2015<br/>
     Software Developer/Owner<br/>
