--- a/~alwold/cv.html
+++ b/~alwold/cv.html
@@ -63,10 +63,10 @@
     <ul>
       <li>iOS - Swift (up to 5), Objective C, Push notifications, TouchID, Autolayout, Keychain, LocalAuthentication</li>
       <li>Android - Compatibility API, Programming for device fragmentation</li>
-      <li>Java - Java EE, Servlets/JSP, JDBC, JUnit, Hibernate, Spring</li>
+      <li>Java - Spring/Spring Boot, JPA/Hibernate</li>
       <li>Ruby on Rails</li>
-      <li>Javascript</li>
-      <li>Web - HTML, CSS</li>
+      <li>Basic Javascript</li>
+      <li>Basic Web - HTML, CSS</li>
    </div>
   </div>
    <div class="subsection">
@@ -77,6 +77,7 @@
     <uL>
       <li>Source control - git, Subversion</li>
       <li>Build tools - ant, Maven, gradle, CocoaPods, Fabric, fastlane</li>
+      <li>Continuous integration - Travis CI, Circle CI, GitLab CI, Automated deployment to Apple TestFlight</li>
       <li>Databases - PostgreSQL, MySQL, Oracle</li>
       <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
       <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
@@ -94,13 +95,13 @@
    </div>
    <p>
      <ul>
-       <li>Develop new features and maintain the Trusona iOS app</li>
-       <li>Develop and maintain the Trusona SDK, distributed as a Cocoapod</li>
-       <li>Manage a continuous integration pipeline for Trusona iOS app and SDKs</li>
-       <li>Automate testing of the Trusona iOS app using Calabash UI tests</li>
-       <li>Lead design sessions to plan architecture and implementation for mobile and backend features</li>
-       <li>Develop and maintain features in backend Java (Spring Boot) and Ruby on Rails stacks</li>
-       <li>Configure backend deployments to Kubernetes clusters</li>
+       <li>Led development of new features and maintenance of the Trusona iOS app</li>
+       <li>Led development and maintenance of the Trusona SDK, distributed as a Cocoapod</li>
+       <li>Developed a continuous integration pipeline for Trusona iOS app and SDKs, automating testing and deployment to app store</li>
+       <li>Automated testing of the Trusona iOS app using Calabash UI tests</li>
+       <li>Led design sessions to plan architecture and implementation for mobile and backend features</li>
+       <li>Developed and maintained features in backend Java (Spring Boot) and Ruby on Rails stacks</li>
+       <li>Configured backend deployments to Kubernetes clusters</li>
      </ul>
    </p>
    <div class="subsection">
@@ -110,11 +111,13 @@
    </div>
    <p>
    <ul>
-     <li>Develop custom iOS apps for clients in the electric utility industry</li>
-     <li>Develop new apps in Swift and maintain existing Objective C apps/libraries</li>
-     <li>Migrate apps to new Swift releases</li>
-     <li>Develop Java backend services to integrate between app and utility web services</li>
+     <li>Developed custom iOS apps for clients in the electric utility industry</li>
+     <li>Developed new apps in Swift and maintained existing Objective C apps/libraries</li>
+     <li>Migrated apps to new Swift releases</li>
+     <li>Developed Java backend services to integrate between app and utility SOAP web services</li>
      <li>Act as a technical liason to the project team, assisting with customer requirement gathering, support, etc.</li>
+     <li>Planned app implementations and led development on both iOS and Android</li>
+     <li>Mentored other developers</li>
    </ul>
    </p>
    <div class="subsection">
@@ -123,11 +126,11 @@
     Wold Technologies, Inc.
     <p/>
     <ul>
-     <li>Provide contract software development services to a wide range of companies</li>
-     <li>Develop custom software solutions in Java, Ruby on Rails, iOS, Android, etc.</li>
-     <li>Consult with clients on project planning, requirements gathering and product selection</li>
-     <li>Provide services to test and deploy software to a production environment</li>
-     <li>Assist clients with enrolling in developer programs and preparing software for app store approval</li>
+     <li>Provided contract software development services to a wide range of companies</li>
+     <li>Developed custom software solutions in Java, Ruby on Rails, iOS, Android, etc.</li>
+     <li>Consulted with clients on project planning, requirements gathering and product selection</li>
+     <li>Provided services to test and deploy software to a production environment</li>
+     <li>Assisted clients with enrolling in developer programs and preparing software for app store approval</li>
     </ul>
    </div>
    <div class="subsection">
@@ -179,7 +182,7 @@
     <br/>
     2016-2017
     <p>
-      Lead development on a customer-facing app for Alliant Energy, an electric power company in Wisconsin. Built the majority of the app in Swift 3, while integrating and enhancing an internal library written in Objective C. Lead initial requirements gathering sessions at the client site, and was the main technical point of contact for the client. The app includes account login, outage status/reporting, in-app payments and push notifications for outages.
+      Led development on a customer-facing app for Alliant Energy, an electric power company in Wisconsin. Built the majority of the app in Swift 3, while integrating and enhancing an internal library written in Objective C. Led initial requirements gathering sessions at the client site, and was the main technical point of contact for the client. The app included account login, outage status/reporting, in-app payments and push notifications for outages.
     </p>
    </div>
    <div class="subsection">
@@ -187,7 +190,7 @@
     <br/>
     2015-2016
     <p>
-     Lead development on a customer-facing app for Newfoundland Power, an electric power company in Newfoundland, Canada. Built the app in Swift 2, along with a service layer to convert SOAP services to REST based services. The app includes account login, outage status/reporting, and an interactive component to assist users with reading mechanical electric meters.
+     Led development on a customer-facing app for Newfoundland Power, an electric power company in Newfoundland, Canada. Built the app in Swift 2, along with a service layer to convert SOAP services to REST based services. The app included account login, outage status/reporting, and an interactive component to assist users with reading mechanical electric meters.
     </p>
    </div>
    <div class="subsection">
