--- a/~alwold/cv.html
+++ b/~alwold/cv.html
@@ -71,7 +71,7 @@
   </div>
    <div class="subsection">
     <span class="subsectionTitle">
-    Applications
+    Applications and Tools
     </span>
     <br/>
     <uL>
@@ -82,7 +82,7 @@
       <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
       <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
       <li>Cloud - AWS, Kubernetes, Docker</li>
-      <li>Project management - Confluence, JIRA, Trello</li>
+      <li>Project management - JIRA, Trello</li>
    </div>
   <div id="experience">
    <div class="sectionTitle">
@@ -97,6 +97,8 @@
      <ul>
        <li>Led development of new features and maintenance of the Trusona iOS app</li>
        <li>Led development and maintenance of the Trusona SDK, distributed as a Cocoapod</li>
+       <li>Provided technical assistance/consultation to support, sales engineering and customers</li>
+       <li>Assisted with Android design/architecture and development when needed</li>
        <li>Developed a continuous integration pipeline for Trusona iOS app and SDKs, automating testing and deployment to app store</li>
        <li>Automated testing of the Trusona iOS app using Calabash UI tests</li>
        <li>Led design sessions to plan architecture and implementation for mobile and backend features</li>
@@ -111,11 +113,12 @@
    </div>
    <p>
    <ul>
-     <li>Developed custom iOS apps for clients in the electric utility industry</li>
+     <li>Developed custom mobile apps for clients in the electric utility industry</li>
      <li>Developed new apps in Swift and maintained existing Objective C apps/libraries</li>
      <li>Migrated apps to new Swift releases</li>
+     <li>Spent most development time on iOS, but also assisted with Android development when resources were constrained</li>
      <li>Developed Java backend services to integrate between app and utility SOAP web services</li>
-     <li>Act as a technical liason to the project team, assisting with customer requirement gathering, support, etc.</li>
+     <li>Act as a technical liason to the project team, assisting with customer requirement gathering, project planning and support</li>
      <li>Planned app implementations and led development on both iOS and Android</li>
      <li>Mentored other developers</li>
    </ul>
