--- a/~alwold/cv.html
+++ b/~alwold/cv.html
@@ -293,6 +293,16 @@
   <div id="speaking">
    <div class="sectionTitle">Presentations</div>
    <div class="subsection">
+    <span class="subsectionTitle">PHX Mobile Festival - September 2017</span>
+    <br/>
+    Introduction to ARKit
+   </div>
+   <div class="subsection">
+    <span class="subsectionTitle">PHX Mobile Festival - September 2016</span>
+    <br/>
+    Continuous Integration with iOS
+   </div>
+   <div class="subsection">
     <span class="subsectionTitle">RubyAZ - November 2014</span>
     <br/>
     Loading Code in Ruby
