--- a/~alwold/cv.html
+++ b/~alwold/cv.html
@@ -43,8 +43,7 @@
   <div class="name">
    Albert Wold
   </div>
-  938 E Leeward Ln<br/>
-  Tempe, AZ 85283<br/>
+  Tempe, AZ<br/>
   <p/>
   602.614.3736<br/>
   <p/>
@@ -61,8 +60,8 @@
      Development Platforms
     </span>
     <ul>
-      <li>iOS - Swift (up to 5), Objective C, Push notifications, TouchID, Autolayout, Keychain, LocalAuthentication</li>
-      <li>Android - Compatibility API, Programming for device fragmentation</li>
+      <li>iOS - Swift, Objective C, Autolayout, Keychain, RxSwift, SwiftUI, Combine</li>
+      <li>Android - Basic knowledge</li>
       <li>Java - Spring/Spring Boot, JPA/Hibernate</li>
       <li>Ruby on Rails</li>
       <li>Basic Javascript</li>
@@ -76,12 +75,12 @@
     <br/>
     <uL>
       <li>Source control - git, Subversion</li>
-      <li>Build tools - ant, Maven, gradle, CocoaPods, Fabric, fastlane</li>
-      <li>Continuous integration - Travis CI, Circle CI, GitLab CI, Automated deployment to Apple TestFlight</li>
+      <li>Build tools - ant, Maven, gradle, CocoaPods, fastlane</li>
+      <li>Continuous integration - Travis CI, Circle CI, GitLab CI, Azure Devops, Xcode Cloud, Automated deployment to Apple TestFlight</li>
       <li>Databases - PostgreSQL, MySQL, Oracle</li>
       <li>App/Web servers - Tomcat, JBoss, Apache HTTP, jetty, Websphere, Weblogic, nginx</li>
       <li>Unix tools - ssh, bash, vi, curl, network tools, etc.</li>
-      <li>Cloud - AWS, Kubernetes, Docker</li>
+      <li>Cloud - AWS, Kubernetes, Docker, Splunk</li>
       <li>Project management - JIRA, Trello</li>
    </div>
   <div id="experience">
@@ -89,7 +88,24 @@
     Work Experience
    </div>
    <div class="subsection">
-     9/2019 - Current<br/>
+     10/2019 - Current<br/>
+     Senior iOS Developer<br/>
+     Carvana<br/>
+   </div>
+   <p>
+     <ul>
+       <li>Built features for Carvana's consumer facing iOS app, an app which allows users purchase used cars online</li>
+       <li>Led project to convert the purchase process from an embedded WKWebView to native UI</li>
+       <li>Added instrumentation to identify and correct errors that blocked the user during purchase</li>
+       <li>Expanded unit and UI test coverage of the app to identify bugs before release</li>
+       <li>Made improvements to CI jobs to increase reliability and provide debugging output to help developers more easily fix tests</li>
+       <li>Helped convert the app to a modular architecture to reduce build times and decouple unrelated code</li>
+       <li>Led various team development activities - biweekly lean coffee, SwiftUI practice, book clubs</li>
+       <li>Mentored other developers on the team</li>
+     </ul>
+   </p>
+   <div class="subsection">
+     9/2017 - 10/2019<br/>
      Senior iOS Developer<br/>
      Trusona<br/>
    </div>
